src/tests/testfiles/function-calls/2.txt
testfiles/function-calls/2.c:6:5: error: parameter 1 of 'f' expected 'int' but got 'char *'
f("c");
  ^
